--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Quickies</string>
+    <string name="your_own_ai_assistant">Your own AI Assistant</string>
+    <string name="welcome">Welcome</string>
+    <string name="v_1_0">v 1.0</string>
+    <string name="get_started">Get Started</string>
+    <string name="powered_by_ai">Powered By AI</string>
 </resources>
