--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="background_image">Background Image</string>
     <string name="back_button">Back Button</string>
     <string name="info">Info</string>
+    <string name="user_message">User Message</string>
+    <string name="hii_tell_me_a_joke">Hii, Tell me a joke!</string>
+    <string name="answer_message">Answer Message</string>
+    <string name="dummy_bot_message">This ChatBot Application is a lightweight version of the real-time AI Assistant and developed in a way that it will only solve the simple general life responses. It is not developed for powerful computations or response.</string>
 </resources>
