--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="close">Close</string>
     <string name="bot_message">Bot Message</string>
     <string name="user_message">User Message</string>
+    <string name="please_enter_a_message">Please enter a message ...</string>
 </resources>
